--- a/charts/ibm-mq-operator/values.yaml
+++ b/charts/ibm-mq-operator/values.yaml
@@ -1,11 +1,10 @@
 global: {}
-
 ibm-mq-operator:
   subscriptions:
     ibmmq:
       name: ibm-mq
       subscription:
-        channel: v1.3-eus
+        channel: v1.6
         installPlanApproval: Automatic
         name: ibm-mq
         source: ibm-operator-catalog
