Updates test variables
Signed-off-by: Sean Sundberg <seansund@us.ibm.com>

--- a/module.yaml
+++ b/module.yaml
@@ -24,6 +24,10 @@ versions:
         refs:
           - source: github.com/cloud-native-toolkit/terraform-gitops-cp-platform-navigator.git
             version: ">= 1.0.0"
+      - id: dep-manager
+        refs:
+          - source: github.com/cloud-native-toolkit/terraform-cp4i-dependency-management.git
+            version: ">= 1.0.0"
     variables:
       - name: gitops_config
         moduleRef:
@@ -45,3 +49,7 @@ versions:
         moduleRef:
           id: platform_navigator
           output: name
+      - name: channel
+        moduleRef:
+          id: dep-manager
+          output: mq.channel
