--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -17,7 +17,8 @@ jobs:
 
     strategy:
       matrix:
-        platform: [ocp4_latest]
+        testcase:
+          - ocp4_latest_gitops
       #      max-parallel: 1
       fail-fast: false
 
@@ -43,29 +44,33 @@ jobs:
           echo "Org: $org"
           echo "::set-output name=org::$org"
 
-      - name: Verify deploy on ${{ matrix.platform }}
+      - name: Verify deploy on ${{ matrix.testcase }}
         uses: cloud-native-toolkit/action-module-verify-deploy@main
         with:
-          clusterId: ${{ matrix.platform }}
+          clusterId: ${{ matrix.testcase }}
           validateDeployScript: .github/scripts/validate-deploy.sh
         env:
           TF_VAR_git_username: ${{ secrets.GIT_ADMIN_USERNAME }}
           TF_VAR_git_token: ${{ secrets.GIT_ADMIN_TOKEN }}
           TF_VAR_git_org: ${{ steps.variables.outputs.org }}
           TF_VAR_git_repo: ${{ steps.variables.outputs.repo }}
+          TF_VAR_bootstrap_prefix: ${{ steps.variables.outputs.repo }}
+          TF_VAR_cp_entitlement_key: ${{ secrets.CP_ENTITLEMENT_KEY }}
           TF_VAR_ibmcloud_api_key: ${{ secrets.IBMCLOUD_API_KEY }}
           IBMCLOUD_API_KEY: ${{ secrets.IBMCLOUD_API_KEY }}
 
-      - name: Verify destroy on ${{ matrix.platform }}
+      - name: Verify destroy on ${{ matrix.testcase }}
         uses: cloud-native-toolkit/action-module-verify-destroy@main
         if: ${{ always() }}
         with:
-          clusterId: ${{ matrix.platform }}
+          clusterId: ${{ matrix.testcase }}
         env:
           TF_VAR_git_username: ${{ secrets.GIT_ADMIN_USERNAME }}
           TF_VAR_git_token: ${{ secrets.GIT_ADMIN_TOKEN }}
           TF_VAR_git_org: ${{ steps.variables.outputs.org }}
           TF_VAR_git_repo: ${{ steps.variables.outputs.repo }}
+          TF_VAR_bootstrap_prefix: ${{ steps.variables.outputs.repo }}
+          TF_VAR_cp_entitlement_key: ${{ secrets.CP_ENTITLEMENT_KEY }}
           TF_VAR_ibmcloud_api_key: ${{ secrets.IBMCLOUD_API_KEY }}
           IBMCLOUD_API_KEY: ${{ secrets.IBMCLOUD_API_KEY }}
 
@@ -79,25 +84,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.release.tag_name }}
 
-      - uses: actions/setup-node@v2-beta
+      - uses: cloud-native-toolkit/action-module-metadata-create@v1
         with:
-          node-version: '14'
-
-      - name: Build catalog
-        uses: cloud-native-toolkit/action-module-catalog@v1
-        with:
-          tagName: ${{ github.event.release.tag_name }}
-          distDir: ${{ env.DIST_DIR }}
-          publishBranch: ${{ env.PUBLISH_BRANCH }}
-
-      - name: Verify module schema
-        run: |
-          npm i -g ajv-cli
-          curl -LsO https://modules.cloudnativetoolkit.dev/schemas/module.json
-          ajv test -s module.json -d ${{ env.DIST_DIR }}/index.yaml --valid
+          strict: true
+          validate: true
 
   release:
     needs: [verify, verifyMetadata]
