--- a/index.yaml
+++ b/index.yaml
@@ -1,7 +1,9 @@
 id: github.com/cloud-native-toolkit/terraform-gitops-cp-mq
 name: gitops-cp-mq
 type: terraform
-description: Module to populate a gitops repository with the resources to provision the MQ operator from IBM Cloud Pak for Integration.
+description: >-
+  Module to populate a gitops repository with the resources to provision the MQ
+  operator from IBM Cloud Pak for Integration.
 tags:
   - tools
   - gitops
@@ -16,15 +18,145 @@ versions:
       - id: gitops
         refs:
           - source: github.com/cloud-native-toolkit/terraform-tools-gitops.git
-            version: ">= 1.1.0"
+            version: '>= 1.1.0'
       - id: catalogs
         refs:
           - source: github.com/cloud-native-toolkit/terraform-gitops-cp-catalogs.git
-            version: ">= 1.0.0"
+            version: '>= 1.0.0'
+      - id: dep-manager
+        refs:
+          - source: >-
+              github.com/cloud-native-toolkit/terraform-cp4i-dependency-management.git
+            version: '>= 1.0.0'
+    variables:
+      - name: gitops_config
+        type: |-
+          object({
+              boostrap = object({
+                argocd-config = object({
+                  project = string
+                  repo = string
+                  url = string
+                  path = string
+                })
+              })
+              infrastructure = object({
+                argocd-config = object({
+                  project = string
+                  repo = string
+                  url = string
+                  path = string
+                })
+                payload = object({
+                  repo = string
+                  url = string
+                  path = string
+                })
+              })
+              services = object({
+                argocd-config = object({
+                  project = string
+                  repo = string
+                  url = string
+                  path = string
+                })
+                payload = object({
+                  repo = string
+                  url = string
+                  path = string
+                })
+              })
+              applications = object({
+                argocd-config = object({
+                  project = string
+                  repo = string
+                  url = string
+                  path = string
+                })
+                payload = object({
+                  repo = string
+                  url = string
+                  path = string
+                })
+              })
+            })
+        description: Config information regarding the gitops repo structure
+        moduleRef:
+          id: gitops
+          output: gitops_config
+      - name: git_credentials
+        type: |-
+          list(object({
+              repo = string
+              url = string
+              username = string
+              token = string
+            }))
+        description: The credentials for the gitops repo(s)
+        sensitive: true
+        moduleRef:
+          id: gitops
+          output: git_credentials
+      - name: namespace
+        type: string
+        description: The namespace where the application should be deployed
+        default: openshift-operators
+      - name: server_name
+        type: string
+        description: The name of the server
+        default: default
+        moduleRef:
+          id: gitops
+          output: server_name
+      - name: catalog
+        type: string
+        description: The catalog source that should be used to deploy the operator
+        default: ibm-operator-catalog
+        moduleRef:
+          id: catalogs
+          output: catalog_ibmoperators
+      - name: catalog_namespace
+        type: string
+        description: The namespace where the catalog has been deployed
+        default: openshift-marketplace
+      - name: channel
+        type: string
+        description: The channel that should be used to deploy the operator
+        default: v1.6
+        moduleRef:
+          id: dep-manager
+          output: mq.channel
+    version: v1.1.2
+    outputs:
+      - name: name
+        description: The name of the module
+      - name: branch
+        description: The branch where the module config has been placed
+      - name: namespace
+        description: The namespace where the module will be deployed
+      - name: server_name
+        description: The server where the module will be deployed
+      - name: layer
+        description: The layer where the module is deployed
+      - name: type
+        description: The type of module where the module is deployed
+      - name: bin_dir
+  - platforms:
+      - ocp4
+    dependencies:
+      - id: gitops
+        refs:
+          - source: github.com/cloud-native-toolkit/terraform-tools-gitops.git
+            version: '>= 1.1.0'
+      - id: catalogs
+        refs:
+          - source: github.com/cloud-native-toolkit/terraform-gitops-cp-catalogs.git
+            version: '>= 1.0.0'
       - id: platform_navigator
         refs:
-          - source: github.com/cloud-native-toolkit/terraform-gitops-cp-platform-navigator.git
-            version: ">= 1.0.0"
+          - source: >-
+              github.com/cloud-native-toolkit/terraform-gitops-cp-platform-navigator.git
+            version: '>= 1.0.0'
     variables:
       - name: gitops_config
         moduleRef:
@@ -115,7 +247,7 @@ versions:
           output: name
         type: string
         description: The name of the platform navigator instance
-        default: ""
+        default: ''
         optional: true
       - name: namespace
         type: string
@@ -139,15 +271,16 @@ versions:
       - id: gitops
         refs:
           - source: github.com/cloud-native-toolkit/terraform-tools-gitops.git
-            version: ">= 1.1.0"
+            version: '>= 1.1.0'
       - id: catalogs
         refs:
           - source: github.com/cloud-native-toolkit/terraform-gitops-cp-catalogs.git
-            version: ">= 1.0.0"
+            version: '>= 1.0.0'
       - id: platform_navigator
         refs:
-          - source: github.com/cloud-native-toolkit/terraform-gitops-cp-platform-navigator.git
-            version: ">= 1.0.0"
+          - source: >-
+              github.com/cloud-native-toolkit/terraform-gitops-cp-platform-navigator.git
+            version: '>= 1.0.0'
     variables:
       - name: gitops_config
         moduleRef:
@@ -238,7 +371,7 @@ versions:
           output: name
         type: string
         description: The name of the platform navigator instance
-        default: ""
+        default: ''
         optional: true
       - name: namespace
         type: string
@@ -262,15 +395,16 @@ versions:
       - id: gitops
         refs:
           - source: github.com/cloud-native-toolkit/terraform-tools-gitops.git
-            version: ">= 1.1.0"
+            version: '>= 1.1.0'
       - id: catalogs
         refs:
           - source: github.com/cloud-native-toolkit/terraform-gitops-cp-catalogs.git
-            version: ">= 1.0.0"
+            version: '>= 1.0.0'
       - id: platform_navigator
         refs:
-          - source: github.com/cloud-native-toolkit/terraform-gitops-cp-platform-navigator.git
-            version: ">= 1.0.0"
+          - source: >-
+              github.com/cloud-native-toolkit/terraform-gitops-cp-platform-navigator.git
+            version: '>= 1.0.0'
     variables:
       - name: gitops_config
         moduleRef:
@@ -361,7 +495,7 @@ versions:
           output: name
         type: string
         description: The name of the platform navigator instance
-        default: ""
+        default: ''
         optional: true
       - name: namespace
         type: string
@@ -385,15 +519,16 @@ versions:
       - id: gitops
         refs:
           - source: github.com/cloud-native-toolkit/terraform-tools-gitops.git
-            version: ">= 1.1.0"
+            version: '>= 1.1.0'
       - id: catalogs
         refs:
           - source: github.com/cloud-native-toolkit/terraform-gitops-cp-catalogs.git
-            version: ">= 1.0.0"
+            version: '>= 1.0.0'
       - id: platform_navigator
         refs:
-          - source: github.com/cloud-native-toolkit/terraform-gitops-cp-platform-navigator.git
-            version: ">= 1.0.0"
+          - source: >-
+              github.com/cloud-native-toolkit/terraform-gitops-cp-platform-navigator.git
+            version: '>= 1.0.0'
     variables:
       - name: gitops_config
         moduleRef:
@@ -484,7 +619,7 @@ versions:
           output: name
         type: string
         description: The name of the platform navigator instance
-        default: ""
+        default: ''
         optional: true
       - name: namespace
         type: string
