--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -19,7 +19,8 @@ jobs:
       matrix:
         testcase:
           #comment-out or remove either of the platforms you do not need.  ocp4_latest is IBM Cloud
-          - ocp4_latest_gitops
+          #- ocp4_latest_gitops
+          - ocp4_latest_gitops_cp4i
           #- aws_latest_gitops
       max-parallel: 1
       fail-fast: false
@@ -43,7 +44,7 @@ jobs:
           ENVIRONMENT: ${{ matrix.testcase }}
         shell: bash
         run: |
-          repo=$(echo ${GITHUB_REPOSITORY} | sed -E "s~.*/[^-]+-(.*)~\1-${{matrix.testcase}}~g" | sed 's/_latest_gitops//g')
+          repo=$(echo ${GITHUB_REPOSITORY} | sed -E "s~.*/[^-]+-(.*)~\1-${{matrix.testcase}}~g" | sed 's/_latest_gitops_cp4i//g')
           echo "Repo: $repo"
           echo "::set-output name=repo::$repo"
           org="${GIT_ORG:-cloud-native-toolkit-test}"
