updated gitops provider

--- a/module.yaml
+++ b/module.yaml
@@ -10,6 +10,9 @@ tags:
 versions:
   - platforms:
       - ocp4
+    providers:
+     - name: gitops
+       source: "cloud-native-toolkit/gitops"
     dependencies:
       - id: gitops
         refs:
